--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,28 @@
 plugins {
     id 'groovy'
     id 'java'
+    id 'jacoco'
 }
 
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
     }
+}
+
+
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.required = false
+        csv.required = false
+        html.required = true
+    }
+}
+
+test {
+    useJUnitPlatform()
+    finalizedBy jacocoTestReport
 }
 
 repositories {
@@ -19,8 +35,4 @@ dependencies {
     testImplementation 'org.spockframework:spock-core:2.2-groovy-3.0'
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-}
-
-test {
-    useJUnitPlatform()
 }
